sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  for (k<-getNombreValeurs()-1 to 0 by -1){
    for (j<-0 to k-1){
      if (!plusPetit(j,k)){
        echange(j,k)
      }
    }
  }
  for (i<-0 to getNombreValeurs()-1){
    for (j<-1 to getNombreValeurs()-1-i){
      if (!plusPetit(i,j)){
        ?change(i,j)
      }
    }
  }
}